--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js" 
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
